--- a/tuto2/package.json
+++ b/tuto2/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^12.0.0",
     "@testing-library/user-event": "^13.2.1",
     "bootstrap": "^5.1.3",
+    "htmlparser2": "^7.2.0",
     "json-server": "^0.17.0",
     "react": "^17.0.2",
     "react-bootstrap": "^2.2.1",
