--- a/oefening/package.json
+++ b/oefening/package.json
@@ -9,6 +9,7 @@
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
     "http-proxy-middleware": "^2.0.4",
+    "react": "^18.0.0",
     "react-pdf": "^5.7.2",
     "react-redux": "^7.2.8",
     "react-router-dom": "^6.3.0",
